--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta property="og:title" content="ダンゴムシT字路迷路シミュレーション" />
+  <meta property="og:description" content="ダンゴムシが交替性転向反応に従って単純なT字路迷路を移動するシミュレーションです。" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/Hiroe28/003_pillbug_alternate/main/screenshot.png" />
+  <meta property="og:url" content="https://hiroe28.github.io/003_pillbug_alternate/" />
+  <meta name="twitter:card" content="summary_large_image" />
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ダンゴムシT字路迷路シミュレーション</title>
   <!-- Tailwind CSS -->
